updated index & styles

--- a/index.html
+++ b/index.html
@@ -10,15 +10,17 @@
 <body>
   <header>
     <div class="icon">
-      <p>SURF & PADDLE CO. BLOG</p>
-    </div>
-    <div class="nav">
-      <ul>
-        <li>ABOUT</li>
-        <li>SEARCH</li>
-      </ul>
+      <img src=./images/logo.png/>
+      <div class="icon-text"<span>SURF & PADDLE CO. BLOG</span>
+      </div>
     </div>
   </header>
+  <div class="nav">
+    <ul class="navigation">
+      <li>ABOUT</li>
+      <li>SEARCH</li>
+    </ul>
+  </div>
   <div class="logo">
     <div class="overlay">
       <h1>SURF & PADDLE CO.</h1>
