udpated index & styles

--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
   <meta name="viewport" content-"width=device-width, initial-scale=1.0">
 </head>
 <body>
-  <header>
     <div class="icon">
       <img src=./images/logo.png/>
       <div class="icon-text"<span>SURF & PADDLE CO. BLOG</span>
       </div>
     </div>
-  </header>
   <div class="nav">
     <ul class="navigation">
       <li>ABOUT</li>
       <li>SEARCH</li>
+      <li class="search-icon"><img src=./images/search.png/>
+      </li>
     </ul>
   </div>
   <div class="logo">
@@ -33,7 +33,7 @@
     </div>
   </div>
 
-  <h2>A FANTASTIC ENGAGING HEADLINE GOES HERE</h2>
+  <!--<h2>A FANTASTIC ENGAGING HEADLINE GOES HERE</h2>-->
 
 
 
